2010-07-09  Antti Koivisto  <koivisto@iki.fi>

        Not reviewed.

        Build fix.

        * UIProcess/API/qt/qwkpage.h:

2010-07-08  Brian Weinstein  <bweinstein@apple.com>

        WebKit2 build fix for Windows.

        * WebProcess/Plugins/PluginView.h: Change the forward declaration of Plugin
            to an include.
        * win/WebKit2.vcproj: Update the include paths for Release to match Debug, and
            add some files to the vcproj that were added on Mac.

2010-07-08  Sam Weinig  <sam@webkit.org>

        Attempt to fix the windows build.

        * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebKit::WebFrameLoaderClient::createPlugin):

2010-07-08  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Add NetscapePlugin class
        https://bugs.webkit.org/show_bug.cgi?id=41919

        * WebKit2.xcodeproj/project.pbxproj:
        * WebProcess/Plugins/Netscape/NetscapePlugin.cpp: Added.
        (WebKit::NetscapePlugin::NetscapePlugin):
        (WebKit::NetscapePlugin::~NetscapePlugin):
        (WebKit::NetscapePlugin::initialize):
        (WebKit::NetscapePlugin::destroy):
        (WebKit::NetscapePlugin::paint):
        (WebKit::NetscapePlugin::geometryDidChange):
        * WebProcess/Plugins/Netscape/NetscapePlugin.h: Added.
        (WebKit::NetscapePlugin::create):
        * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebKit::WebFrameLoaderClient::createPlugin):

2010-07-08  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Enable notImplemented messages by default and have the various clients explicitly disable them.

        * Shared/NotImplemented.h:
        * WebProcess/WebCoreSupport/WebChromeClient.cpp:
        * WebProcess/WebCoreSupport/WebContextMenuClient.cpp:
        * WebProcess/WebCoreSupport/WebDragClient.cpp:
        * WebProcess/WebCoreSupport/WebEditorClient.cpp:
        * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp: