@@ -1,3 +1,13 @@
+2010-07-08  Diego Gonzalez  <diegohcg@webkit.org>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] [WebKit2] Make QWKPage call _q_webActionTriggered as a private slot
+        https://bugs.webkit.org/show_bug.cgi?id=41880
+
+        * UIProcess/API/qt/qwkpage.cpp:
+        * UIProcess/API/qt/qwkpage.h:
+
 2010-07-09  Antti Koivisto  <koivisto@iki.fi>
 
         Not reviewed.
